<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_library">

    <fragment
        android:id="@+id/nav_queue"
        android:name="com.codersguidebook.music.ui.playQueue.PlayQueueFragment"
        android:label="@string/play_queue"
        tools:layout="@layout/fragment_play_queue" />

    <fragment
        android:id="@+id/nav_library"
        android:name="com.codersguidebook.music.ui.library.LibraryFragment"
        android:label="@string/library"
        tools:layout="@layout/fragment_library" >
        <argument
            android:name="position"
            android:defaultValue="1"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/nav_search"
        android:name="com.codersguidebook.music.ui.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_songs"
        android:name="com.codersguidebook.music.ui.songs.SongsFragment"
        android:label="@string/songs"
        tools:layout="@layout/fragment_songs" />

    <fragment
        android:id="@+id/nav_edit_song"
        android:name="com.codersguidebook.music.ui.songs.EditSongFragment"
        android:label="@string/edit_metadata"
        tools:layout="@layout/fragment_edit_song">
        <argument
            android:name="song"
            android:defaultValue="@null"
            app:nullable="true"
            app:argType="com.codersguidebook.music.Song" />
    </fragment>

    <action
        android:id="@+id/action_edit_song"
        app:destination="@id/nav_edit_song" />

    <action
        android:id="@+id/action_library"
        app:destination="@id/nav_library" />
</navigation>
