<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="12dp" >

        <ImageView
            android:id="@+id/editSongArtwork"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:clickable="true"
            android:contentDescription="@string/set_album_artwork"
            android:layout_alignParentTop="true" />

        <ImageView
            android:id="@+id/editSongArtworkIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit"
            android:clickable="true"
            android:layout_margin="12dp"
            android:contentDescription="@string/set_album_artwork"
            android:layout_alignBottom="@id/editSongArtwork"
            android:layout_alignEnd="@id/editSongArtwork" />

        <TextView
            android:id="@+id/editSongInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/edit_metadata"
            android:textSize="14sp"
            android:textColor="@color/design_default_color_primary"
            android:layout_below="@id/editSongArtwork"/>

        <TextView
            android:id="@+id/editSongTitleHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/title"
            android:textSize="12sp"
            android:layout_below="@id/editSongInfo" />

        <EditText
            android:id="@+id/editSongTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:textSize="16sp"
            android:inputType="text"
            android:maxLength="100"
            android:hint="@string/title"
            android:importantForAutofill="no"
            android:layout_below="@id/editSongTitleHeading" />

        <TextView
            android:id="@+id/editSongArtistHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/artist"
            android:textSize="12sp"
            android:layout_below="@id/editSongTitle" />

        <EditText
            android:id="@+id/editSongArtist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:textSize="16sp"
            android:inputType="text"
            android:maxLength="100"
            android:hint="@string/artist"
            android:importantForAutofill="no"
            android:layout_below="@id/editSongArtistHeading" />

        <TextView
            android:id="@+id/editSongDiscHeading"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/disc"
            android:textSize="12sp"
            android:layout_below="@id/editSongArtist" />

        <EditText
            android:id="@+id/editSongDisc"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:textSize="16sp"
            android:inputType="number"
            android:maxLength="1"
            android:hint="@string/disc"
            android:importantForAutofill="no"
            android:layout_below="@id/editSongDiscHeading" />

        <TextView
            android:id="@+id/editSongTrackHeading"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:text="@string/track"
            android:textSize="12sp"
            android:layout_below="@id/editSongArtist"
            android:layout_toEndOf="@id/editSongDiscHeading" />

        <EditText
            android:id="@+id/editSongTrack"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:inputType="number"
            android:maxLength="3"
            android:hint="@string/track"
            android:importantForAutofill="no"
            android:layout_below="@id/editSongTrackHeading"
            android:layout_alignStart="@id/editSongTrackHeading" />

        <TextView
            android:id="@+id/editSongYearHeading"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/year"
            android:textSize="12sp"
            android:layout_below="@id/editSongArtist"
            android:layout_toEndOf="@id/editSongTrackHeading" />

        <EditText
            android:id="@+id/editSongYear"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:inputType="number"
            android:maxLength="4"
            android:hint="@string/year"
            android:importantForAutofill="no"
            android:layout_below="@id/editSongYearHeading"
            android:layout_alignStart="@id/editSongYearHeading" />
    </RelativeLayout>
</ScrollView>
